Removed kuali parent pom Fixed pom issues Update license